# hslu-web-helper

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  eslint.config.js  manifest-chrome.json  manifest-firefox.json  modules.py  package-lock.json  package.json  tsconfig.json  updates.json
module-extractor/: Cargo.toml  README.md  extra_modules.json
module-extractor/src/: main.rs
patches/: ag-grid-solid+31.1.1.patch
src/: background.ts  i18n.ts  module.ts  modules.json  modules.ts  modulesData.d.ts  modulesData.js  storage.ts
src/locale/: de-ch.ftl  en.ftl
src/overview/: add-module-modal.tsx  api.ts  confetti.tsx  content.ts  style.css  ui.tsx
src/registration/: content.ts  style.css
