[package]
name = "module-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
itertools = "0.12.1"
# lopdf = "0.32.0"
pdf-extract = "0.7.7"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"]}
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tl = "0.7.8"
